[gd_scene load_steps=16 format=2]

[ext_resource path="res://Left_Display_Tab.gd" type="Script" id=1]
[ext_resource path="res://Left Display Tab/boxes/LARGE BOX/filler.png" type="Texture" id=2]
[ext_resource path="res://Left Display Tab/boxes/LARGE BOX/shading.png" type="Texture" id=3]
[ext_resource path="res://Left Display Tab/boxes/LARGE BOX/outline.png" type="Texture" id=4]
[ext_resource path="res://Left Display Tab/Tower 4 choice.tscn" type="PackedScene" id=5]
[ext_resource path="res://Left Display Tab/choice_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://Left Display Tab/boxes/BOXES/outline.png" type="Texture" id=7]
[ext_resource path="res://Left Display Tab/boxes/BOXES/TOWERS/red tower 4.png" type="Texture" id=8]
[ext_resource path="res://Left Display Tab/Tower 3 choice.tscn" type="PackedScene" id=9]
[ext_resource path="res://Left Display Tab/boxes/BOXES/TOWERS/ptower 1.png" type="Texture" id=10]
[ext_resource path="res://Left Display Tab/Tower 2 choice.tscn" type="PackedScene" id=11]
[ext_resource path="res://Left Display Tab/Tower 1 choice.gd" type="Script" id=12]
[ext_resource path="res://Left Display Tab/boxes/BOXES/TOWERS/TOWER2.png" type="Texture" id=13]
[ext_resource path="res://Left Display Tab/Tower 1 choice.tscn" type="PackedScene" id=14]
[ext_resource path="res://Left Display Tab/boxes/BOXES/TOWERS/TOWER1.png" type="Texture" id=15]

[node name="Left_Display_Tab" type="Control"]
margin_left = 30.0
margin_top = 30.0
margin_right = 405.0
margin_bottom = 160.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Container" type="Control" parent="."]
editor/display_folded = true
margin_right = 370.0
margin_bottom = 115.0

[node name="TextureRect2" type="TextureRect" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="Container"]
margin_left = 5.0
margin_top = 55.0
margin_right = 361.0
margin_bottom = 112.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="Tower 4" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
margin_left = 285.0
margin_top = 15.0
margin_right = 360.0
margin_bottom = 115.0
focus_next = NodePath("../Tower 1")

[node name="Button4" parent="Tower 4" instance=ExtResource( 6 )]
margin_right = -10.0
margin_bottom = -35.0
rect_min_size = Vector2( 65, 65 )
texture_pressed = ExtResource( 7 )

[node name="FocusButton4" type="TextureRect" parent="Tower 4"]
visible = false
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Tower 4/FocusButton4"]
margin_left = -5.0
margin_top = -4.22623
margin_right = 70.0
margin_bottom = 70.7738
texture = ExtResource( 7 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Tower 4/FocusButton4"]
margin_left = -5.0
margin_top = 65.0
margin_right = 70.0
margin_bottom = 87.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Tower 4/FocusButton4"]
margin_left = -25.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 105.0
rect_min_size = Vector2( 85, 100 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Tower 3" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
margin_left = 195.0
margin_top = 15.0
margin_right = 270.0
margin_bottom = 115.0
focus_next = NodePath("../Tower 4")

[node name="Button3" parent="Tower 3" instance=ExtResource( 6 )]
margin_right = -10.0
margin_bottom = -35.0
rect_min_size = Vector2( 65, 65 )
texture_pressed = ExtResource( 7 )

[node name="FocusButton3" type="TextureRect" parent="Tower 3"]
visible = false
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Tower 3/FocusButton3"]
margin_left = -5.0
margin_top = -4.22623
margin_right = 70.0
margin_bottom = 70.7738
texture = ExtResource( 7 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Tower 3/FocusButton3"]
margin_left = -5.0
margin_top = 65.0
margin_right = 70.0
margin_bottom = 87.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Tower 3/FocusButton3"]
margin_left = -25.0
margin_top = -13.0
margin_right = 90.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 1

[node name="Tower 2" parent="." instance=ExtResource( 11 )]
editor/display_folded = true
margin_left = 105.0
margin_top = 15.0
margin_right = 180.0
margin_bottom = 115.0
focus_next = NodePath("../Tower 3")
script = ExtResource( 12 )

[node name="Button2" parent="Tower 2" instance=ExtResource( 6 )]
margin_top = -1.0
margin_right = -10.0
margin_bottom = -36.0
rect_min_size = Vector2( 65, 65 )
texture_pressed = ExtResource( 7 )

[node name="FocusButton2" type="TextureRect" parent="Tower 2"]
visible = false
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Tower 2/FocusButton2"]
margin_left = -5.0
margin_top = 65.0
margin_right = 70.0
margin_bottom = 87.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Tower 2/FocusButton2"]
margin_left = -5.0
margin_top = -4.22623
margin_right = 70.0
margin_bottom = 70.7738
texture = ExtResource( 7 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Tower 2/FocusButton2"]
margin_left = -35.0
margin_top = -35.0
margin_right = 115.0
margin_bottom = 115.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 1

[node name="Tower 1" parent="." instance=ExtResource( 14 )]
editor/display_folded = true
margin_left = 15.0
margin_top = 15.0
margin_right = 90.0003
margin_bottom = 115.0

[node name="Button" parent="Tower 1" instance=ExtResource( 6 )]
margin_right = -10.0003
margin_bottom = -35.0
rect_min_size = Vector2( 65, 65 )
texture_pressed = ExtResource( 7 )

[node name="FocusButton" type="TextureRect" parent="Tower 1"]
visible = false
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Tower 1/FocusButton"]
margin_left = -5.0
margin_top = -4.22623
margin_right = 70.0
margin_bottom = 70.7738
texture = ExtResource( 7 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Tower 1/FocusButton"]
margin_left = -5.0
margin_top = 65.0
margin_right = 70.0
margin_bottom = 87.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Tower 1/FocusButton"]
margin_left = -25.0
margin_top = -30.0
margin_right = 90.0
margin_bottom = 85.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 1

[node name="Timer" type="Timer" parent="."]
[connection signal="button_down" from="Tower 4/Button4" to="." method="_on_Button4_button_down"]
[connection signal="button_down" from="Tower 4/Button4" to="Tower 4" method="_on_Button4_button_down"]
[connection signal="button_up" from="Tower 4/Button4" to="Tower 4" method="_on_Button4_button_up"]
[connection signal="focus_entered" from="Tower 4/Button4" to="Tower 4" method="_on_Button4_focus_entered"]
[connection signal="focus_exited" from="Tower 4/Button4" to="Tower 4" method="_on_Button4_focus_exited"]
[connection signal="pressed" from="Tower 4/Button4" to="." method="_on_Button4_pressed"]
[connection signal="button_down" from="Tower 3/Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Tower 3/Button3" to="Tower 3" method="_on_Button3_button_down"]
[connection signal="button_up" from="Tower 3/Button3" to="Tower 3" method="_on_Button3_button_up"]
[connection signal="focus_entered" from="Tower 3/Button3" to="Tower 3" method="_on_Button3_focus_entered"]
[connection signal="focus_exited" from="Tower 3/Button3" to="Tower 3" method="_on_Button3_focus_exited"]
[connection signal="button_down" from="Tower 2/Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Tower 2/Button2" to="Tower 2" method="_on_Button2_button_down"]
[connection signal="button_up" from="Tower 2/Button2" to="Tower 2" method="_on_Button2_button_up"]
[connection signal="focus_entered" from="Tower 2/Button2" to="Tower 2" method="_on_Button2_focus_entered"]
[connection signal="focus_exited" from="Tower 2/Button2" to="Tower 2" method="_on_Button2_focus_exited"]
[connection signal="button_down" from="Tower 1/Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Tower 1/Button" to="Tower 1" method="_on_Button_button_down"]
[connection signal="button_up" from="Tower 1/Button" to="Tower 1" method="_on_Button_button_up"]
[connection signal="focus_entered" from="Tower 1/Button" to="Tower 1" method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Tower 1/Button" to="Tower 1" method="_on_Button_focus_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
